标记删除 78-34 「萬物歸焉而弗爲主」重复出现，「恆无欲」使用错误

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1366,17 +1366,17 @@
 
 > 不失亓所者 久也 死不忘者 壽也
 
-### 78-34
+### <del>78-34</del>
 
-#### 成大
+#### <del>成大</del>
 
-> 道渢呵 亓可左右也
+> <del>道渢呵 亓可左右也</del>
 
-> 成功遂事 而弗名有也 萬物歸焉而弗爲主
+> <del>成功遂事 而弗名有也 萬物歸焉而弗爲主</del>
 
-> 則恆无欲也 可名於小 萬物歸焉而弗爲主 可名於大
+> <del>則恆无欲也 可名於小 萬物歸焉而弗爲主 可名於大</del>
 
-> 是以聖人之能成大也 以亓不爲大也 故能成大
+> <del>是以聖人之能成大也 以亓不爲大也 故能成大</del>
 
 ### 79-35
 
