标记删除 76-32 「天下弗敢臣」非不争之德，「民莫之令而自均焉」不理解道与德
「自均」的状态只是后人的自以为是

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1340,19 +1340,19 @@
 
 > 殺人眾 以悲依立之 戰勝 以喪禮處之
 
-### 76-32
+### <del>76-32</del>
 
-#### 知止
+#### <del>知止</del>
 
-> 道恆无名
+> <del>道恆无名</del>
 
-> 楃唯小 而天下弗敢臣
+> <del>楃唯小 而天下弗敢臣</del>
 
-> 侯王若能守之 萬物將自賓 天地相合 以俞甘洛 民莫之令而自均焉
+> <del>侯王若能守之 萬物將自賓 天地相合 以俞甘洛 民莫之令而自均焉</del>
 
-> 始制有名 名亦既有 夫亦將知止 知止所以不殆
+> <del>始制有名 名亦既有 夫亦將知止 知止所以不殆</del>
 
-> 俾道之在天下也 猶小浴之與江海也
+> <del>俾道之在天下也 猶小浴之與江海也</del>
 
 ### 77-33
 
