--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -18,6 +18,8 @@
 
 > 上德无爲 而无以爲也 上仁爲之 而无以爲也 上義為之 而有以爲也 上禮爲之 而莫之應也 則攘臂而扔之
 
+上德，符合基于（遵循）道的范式的这种状态的方法，不行动，无目的；上仁，上等的无差别向外广泛散发的爱、慈、亲，有行动，无目的；上义，上等的内心意识施加的规约（规范、约束），有行动，有目的；上礼，上等的外表形式施加的规约（规范、约束），有行动，却毫无回应。既然上礼根本不起任何作用，那么当然就捋起袖子用力把上礼扔掉。
+
 ```
 「德」：符合基于（遵循）道的范式的这种状态的方法。
 - 因为此处该字与「上」结合使用，使该字同时具备双重含义。
@@ -26,11 +28,14 @@
 「仁」：向外广泛散发的爱、慈、亲。
 「義」：内心意识施加的规约（规范、约束）。
 「禮」：外表形式施加的规约（规范、约束）。
+「應」：该字与「不言而善應」处用法同。
+「攘臂」：
+- 另一处「攘无臂」。
 ```
 
 > 故失道而后德 失德而后仁 失仁而后義 失義而后禮 夫禮者 忠信之泊也 而亂之首也
 
-所以，无法跟随源头规律空间的话，只有退而谋求基于规律的方法。
+所以，无法跟随源头规律空间的话，只有退而谋求掌握符合基于（遵循）道的范式的这种状态的方法；无法掌握符合基于（遵循）道的范式的这种状态的方法的话，只有退而谋求具备向外广泛散发的爱、慈、亲；无法具备向外广泛散发的爱、慈、亲的话，只有退而谋求具备内心意识施加的规约（规范、约束）；无法具备内心意识施加的规约（规范、约束）的话，只有退而谋求具备外表形式施加的规约（规范、约束）。礼，外表形式施加的规约（规范、约束），稀缺忠信，也是混沌失衡的开始。
 
 > 前識者 道之華也 而愚之首也
 
@@ -69,10 +74,13 @@
 
 > 是以大丈夫居亓厚而不居亓泊 居亓實而不居亓華 故去彼取此
 
+因此，独具慧眼的大丈夫将自己置身于忠信基础浓重的环境中，而非忠信基础稀缺的环境中；将自己置身于有长久、充沛支撑的环境中，而非漂亮、短暂、无以为继的环境中。所以，要去除那些而获取这些。
+
 ```
-「大丈夫」：《道德经》仅此一处使用该指代。
-- 为何不使用「君子」？
-- 为何不使用「圣人」？
+「大丈夫」：不从众（水下流）、有眼光、有志向、有决心、有能力、有行动、有效果、有坚持的人。
+- 《道德经》仅此一处使用该指代。
+- 为何不使用「君子」？「君子」不具此意。指向不同对象。
+- 为何不使用「圣人」？「圣人」不具此意。指向不同对象。
 「厚」与「泊」相反。
 「實」与「華」相反。
 - 与实相反：「華」有虚、无的意涵。
