标记删除 64-20 「我愚人之心也」伪作

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1170,25 +1170,25 @@
 
 > <del>見素抱樸 少私寡欲 絕學无憂</del>
 
-### 64-20
+### <del>64-20</del>
 
-#### 食母
+#### <del>食母</del>
 
-> 唯與訶 亓相去幾何 美與惡 亓相去何若
+> <del>唯與訶 亓相去幾何 美與惡 亓相去何若</del>
 
-> 人之所畏 亦不可以不畏人
+> <del>人之所畏 亦不可以不畏人</del>
 
-> 朢呵 亓未央哉
+> <del>朢呵 亓未央哉</del>
 
-> 眾人巸巸 若鄉於大牢 而春登臺
+> <del>眾人巸巸 若鄉於大牢 而春登臺</del>
 
-> 我泊焉未兆 若嬰兒未咳 纍呵 似无所歸
+> <del>我泊焉未兆 若嬰兒未咳 纍呵 似无所歸</del>
 
-> 眾人皆有餘 我獨遺 我愚人之心也 湷湷呵 鬻人昭昭 我獨呵 鬻人蔡蔡 我獨悶悶呵
+> <del>眾人皆有餘 我獨遺 我愚人之心也 湷湷呵 鬻人昭昭 我獨呵 鬻人蔡蔡 我獨悶悶呵</del>
 
-> 忽呵 亓若海 朢呵 亓若无所止
+> <del>忽呵 亓若海 朢呵 亓若无所止</del>
 
-> 眾人皆有以 我獨頑以悝 吾欲獨異於人 而貴食母
+> <del>眾人皆有以 我獨頑以悝 吾欲獨異於人 而貴食母</del>
 
 ### 65-21
 
