标记删除 71-27 「聖人恆善救人 而无棄人」不符经文
与此矛盾：
「聖人不仁 以百姓爲芻狗」
「聖人恆无心 以百姓之心為心」
「以道蒞天下 亓鬼不神 非亓鬼不神也 亓神不傷人也 非亓神不傷人也 聖人亦弗傷也」
此篇模仿对象之一是：
「信言不美 美言不信 知者不博 博者不知 善者不多 多者不善

聖人无積 既以爲人 己愈有 既以予人 己愈多

故天之道 利而不害 人之道 爲而弗爭」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1274,17 +1274,17 @@
 
 > 巠則失本 趮則失君
 
-### 71-27
+### <del>71-27</del>
 
-#### 曳明
+#### <del>曳明</del>
 
-> 善行者无轍迹 善言者无瑕適 善數者不用檮策 善閉者无關籥而不可啟也 善結者无纆約而不可解也
+> <del>善行者无轍迹 善言者无瑕適 善數者不用檮策 善閉者无關籥而不可啟也 善結者无纆約而不可解也</del>
 
-> 是以聖人恆善救人 而无棄人 物无棄財 是謂曳明
+> <del>是以聖人恆善救人 而无棄人 物无棄財 是謂曳明</del>
 
-> 故善人 善人之師 不善人 善人之齎也
+> <del>故善人 善人之師 不善人 善人之齎也</del>
 
-> 不貴亓師 不愛亓齎 唯知乎大眯 是謂眇要
+> <del>不貴亓師 不愛亓齎 唯知乎大眯 是謂眇要</del>
 
 ### <del>72-28</del>
 
