完成 14-51 「爲」的含意

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -444,6 +444,15 @@
 
 > 生而弗有也 爲而弗恃也 長而弗宰也 此之謂玄德
 
+```
+「生而弗有也 爲而弗恃也 長而弗宰也」
+- 对应上一段「道生之 畜之 長之」的顺序。
+- 因此，「爲」对应的是「畜」。
+「爲」：
+- 具象指代「畜」。
+- 由具象变换到抽象指代动作、行为。
+```
+
 ### 15-52
 
 #### 守母
