初步形成 31-81 「爲人」解释所需的前提内容

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -706,7 +706,33 @@
 
 > 信言不美 美言不信 知者不博 博者不知 善者不多 多者不善
 
+```
+「善者」：善长的人。
+- 隐含意思是善长以道从事的人。
+「多」：同时兼具两层含意。
+- 量方面多的状态。
+- 追求多的行为。
+「善者不多 多者不善」
+- 引出下一段「聖人」的衔接。
+- 点出善长以道从事的人不具有追求多的行为。
+```
+
 > 聖人无積 既以爲人 己愈有 既以予人 己愈多
+
+```
+「聖人」：符合「善者」的定义。
+- 但逻辑上，《道德经》并未说明「善者」是否必是「聖人」。
+「既以」：用已具备的条件去实行具体的行动。
+结构：此处仅举一例。
+- 无積……愈有……愈多
+- 无……有……多
+- 实现「有……多」的行为是「予人」。动作是「予」。
+- 实现「无……有」的行为是「爲人」。动作是「爲」。
+「予」：给出去。
+- 前提条件是已经有可以给出去的东西。
+「爲」：
+- 创造出从无到有的动作。
+```
 
 > 故天之道 利而不害 人之道 爲而弗爭
 
