完成 31-81「聖人无積 既以爲人 己愈有 既以予人 己愈多」解释

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -719,6 +719,8 @@
 
 > 聖人无積 既以爲人 己愈有 既以予人 己愈多
 
+圣人没有囤蓄，用已有的实现与人的连通，圣人自己连通上的人就越多；用已有的给那些与圣人建立了连通的人，圣人自己有的就越多。
+
 ```
 「聖人」：符合「善者」的定义。
 - 但逻辑上，《道德经》并未说明「善者」是否必是「聖人」。
@@ -732,6 +734,18 @@
 - 前提条件是已经有可以给出去的东西。
 「爲」：
 - 创造出从无到有的动作。
+「人」：
+- 为何不是「民」、「百姓」？
+- 因为指代对象是人类集合的任何非空子集。
+以类比描述《道德经》暗含的套利模型：
+- 连通器。
+- 对其任何一部分，都满足「无積」。
+- 圣人在无的状态阶段，要达成有，需要与人类系统构造连通器。
+- 圣人所在的模块与人类系统所在的模块是连通器的两个不同部分。
+- 连通器构造所覆盖的人类系统比例越高，从无变有的比例就越高。
+- 在连通器已经覆盖的人类系统范围内，由于连通器的效果，任何一部分变多，都意味着所有其他部分也变多。
+「爲人」：构造覆盖一部分人类系统的连通器。
+「予人」：连通器运转时保证所有部分都有连通效果的动作。
 ```
 
 > 故天之道 利而不害 人之道 爲而弗爭
