--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -706,6 +706,8 @@
 
 > 信言不美 美言不信 知者不博 博者不知 善者不多 多者不善
 
+可信的言语不令人飘飘然，让人飘飘然的言语不可信；知道不是样样了解，样样了解是不知道；善长（以道从事）不追求多，追求多不是善长（以道从事）。
+
 ```
 「善者」：善长的人。
 - 隐含意思是善长以道从事的人。
@@ -750,7 +752,16 @@
 
 > 故天之道 利而不害 人之道 爲而弗爭
 
-人类所需遵循的方式是行动，但不涉足竞争。
+所以，圣人作为像天一样高于人类的存在，遵循的方式是利而不害，同时，这也是天遵循的方式；人类所需遵循的方式是行动，但不涉足竞争。
+
+```
+两处分别对应上一段中的动作：
+- 「利而不害」：「予」。
+- 「爲而弗爭」：「爲」。
+「天」：同时兼具双重含意。
+- 天、宇宙。
+- 圣人，作为像天一样高于人类的存在。这是由与上一段中的对应结构而表明的。
+```
 
 ### 32-67
 
