标记删除 21-58「善復爲訞」善对訞，善表示的不是善长
《道德经》中的「善」，只表示善长。
此处，却表示善意的善。

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -525,19 +525,19 @@
 
 > 是以聖人之言曰 我无爲而民自化 我好靜而民自正 我无事而民自富 我欲不欲而民自樸
 
-### 21-58
+### <del>21-58</del>
 
-#### 爲正
+#### <del>爲正</del>
 
-> 亓正閔閔 亓民屯屯 亓正察察 亓邦夬夬
+> <del>亓正閔閔 亓民屯屯 亓正察察 亓邦夬夬</del>
 
-> 禍 福之所倚 福 禍之所伏 孰知亓極
+> <del>禍 福之所倚 福 禍之所伏 孰知亓極</del>
 
-> 亓无正也 正復爲奇 善復爲訞
+> <del>亓无正也 正復爲奇 善復爲訞</del>
 
-> 人之迷也 亓日固久矣
+> <del>人之迷也 亓日固久矣</del>
 
-> 是以方而不割 兼而不刺 直而不紲 光而不耀
+> <del>是以方而不割 兼而不刺 直而不紲 光而不耀</del>
 
 ### 22-59
 
