标记删除 22-59「積德、无不克、亓極」皆非经中可引概念

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -539,15 +539,15 @@
 
 > <del>是以方而不割 兼而不刺 直而不紲 光而不耀</del>
 
-### 22-59
+### <del>22-59</del>
 
-#### 長生
+#### <del>長生</del>
 
-> 治人事天 莫若嗇
+> <del>治人事天 莫若嗇</del>
 
-> 夫唯嗇 是以蚤服 蚤服是謂重積德 重積德則无不克 无不克則莫知亓極 莫知亓極 可以有國 有國之母 可以長久
+> <del>夫唯嗇 是以蚤服 蚤服是謂重積德 重積德則无不克 无不克則莫知亓極 莫知亓極 可以有國 有國之母 可以長久</del>
 
-> 是謂深根固柢 長生久視之道也
+> <del>是謂深根固柢 長生久視之道也</del>
 
 ### 23-60
 
