标记删除 32-67 「夫茲 故能勇」不符合《道德经》

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -763,19 +763,19 @@
 - 圣人，作为像天一样高于人类的存在。这是由与上一段中的对应结构而表明的。
 ```
 
-### 32-67
+### <del>32-67</del>
 
-#### 三寶
+#### <del>三寶</del>
 
-> 天下皆謂我大 不宵 夫唯大 故不宵 若宵 細久矣
+> <del>天下皆謂我大 不宵 夫唯大 故不宵 若宵 細久矣</del>
 
-> 我恆有三寶之 一曰茲 二曰檢 三曰不敢爲天下先
+> <del>我恆有三寶之 一曰茲 二曰檢 三曰不敢爲天下先</del>
 
-> 夫茲 故能勇 檢 故能廣 不敢爲天下先 故能爲成事長
+> <del>夫茲 故能勇 檢 故能廣 不敢爲天下先 故能爲成事長</del>
 
-> 今捨亓茲且勇 捨亓檢且廣 捨亓後且先 則必死矣
+> <del>今捨亓茲且勇 捨亓檢且廣 捨亓後且先 則必死矣</del>
 
-> 夫茲 以戰則勝 以守則固 天將建之 如以茲垣之
+> <del>夫茲 以戰則勝 以守則固 天將建之 如以茲垣之</del>
 
 ### 33-68
 
