建立 34-69 「吾寶」的指向

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -799,6 +799,13 @@
 
 > 禍莫大於无適 无適近亡吾寶矣
 
+```
+「吾寶」：
+- 「道者 萬物之注也 善人之寳也 不善人之所寳也」
+- 《道德经》作者是「善人」：「善者不多 …… 聖人无積」
+- 「寶」：「道者」
+```
+
 > 故稱兵相若 則哀者勝矣
 
 ### 35-70
