初步完成关于 16-53 即为 28-65 前缺失内容的说明

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -680,6 +680,23 @@
 
 > 玄德深矣 遠矣 與物反矣 乃至大順
 
+```
+28-65 开篇即为「故曰」，显然该篇另有其他内容居前。
+16-53 即为 28-65 前缺失内容。
+- 病：「大道甚夷 民甚好解 …… 非道也」
+- 药：「爲道者非以明民也 將以愚之也 民之難治也 以亓知也」
+
+两篇合二为一：
+
+使我挈有知也 行於大道 唯施是畏
+大道甚夷 民甚好解
+朝甚除 田甚蕪 倉甚虛 服文采 帶利劍 厭食而齎財有餘 是謂盜竽 非道也
+故曰 爲道者非以明民也 將以愚之也 民之難治也 以亓知也
+故以知知邦 邦之賊也 以不知知邦 邦之德也
+恆知此兩者 亦稽式也 恆知稽式 此謂玄德
+玄德深矣 遠矣 與物反矣 乃至大順
+```
+
 ### 29-66
 
 #### 江海
