标记删除 20-57 「以正之邦 以畸用兵」、「昏 」均不符《道德经》经意

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -515,15 +515,15 @@
 
 > 故不可得而親 亦不可得而疏 不可得而利 亦不可得而害 不可得而貴 亦不可得而賤 故為天下貴
 
-### 20-57
+### <del>20-57</del>
 
-#### 治邦
+#### <del>治邦</del>
 
-> 以正之邦 以畸用兵 以无事取天下 吾何以知亓然也
+> <del>以正之邦 以畸用兵 以无事取天下 吾何以知亓然也</del>
 
-> 夫天下多忌諱 而民彌貧 民多利器 而邦滋昏 人多知 而奇物滋起 法物滋彰 而盜賊多有
+> <del>夫天下多忌諱 而民彌貧 民多利器 而邦滋昏 人多知 而奇物滋起 法物滋彰 而盜賊多有</del>
 
-> 是以聖人之言曰 我无爲而民自化 我好靜而民自正 我无事而民自富 我欲不欲而民自樸
+> <del>是以聖人之言曰 我无爲而民自化 我好靜而民自正 我无事而民自富 我欲不欲而民自樸</del>
 
 ### <del>21-58</del>
 
