标记删除 15-52 「常」被当成「恒」而用

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -453,25 +453,25 @@
 - 由具象变换到抽象指代动作、行为。
 ```
 
-### 15-52
+### <del>15-52</del>
 
-#### 守母
+#### <del>守母</del>
 
-> 天下有始 以爲天下母
+> <del>天下有始 以爲天下母</del>
 
-> 既得亓母 以知亓子 復守亓母 沒身不殆
+> <del>既得亓母 以知亓子 復守亓母 沒身不殆</del>
 
 得到其母之所在，就可以由此得到其子之所在，再回过头来守在其母之所在。终其一生，都能够免于危难。
 
-> 塞亓兌 閉亓門 終身不堇
+> <del>塞亓兌 閉亓門 終身不堇</del>
 
-> 啓亓兌 濟亓事 終身不逨
+> <del>啓亓兌 濟亓事 終身不逨</del>
 
-> 見小曰明 守柔曰強
+> <del>見小曰明 守柔曰強</del>
 
-> 用亓光 復歸亓明
+> <del>用亓光 復歸亓明</del>
 
-> 毋遺身殃 是謂襲常
+> <del>毋遺身殃 是謂襲常</del>
 
 ### 16-53
 
