标记删除 29-66 「聖人之欲上民」是俗人想象力的极限；道德经指引的方向是「芮」维度的切换

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -697,13 +697,13 @@
 玄德深矣 遠矣 與物反矣 乃至大順
 ```
 
-### 29-66
+### <del>29-66</del>
 
-#### 江海
+#### <del>江海</del>
 
-> 江海所以能爲百浴王者 以亓善下之 是以能爲百浴王
+> <del>江海所以能爲百浴王者 以亓善下之 是以能爲百浴王</del>
 
-> 是以聖人之欲上民也 必以亓言下之 欲先民也 必以亓身後之 故居前而民弗害也 居上而民弗重也 天下樂推而弗猒也 非以亓无諍與 故天下莫能與諍
+> <del>是以聖人之欲上民也 必以亓言下之 欲先民也 必以亓身後之 故居前而民弗害也 居上而民弗重也 天下樂推而弗猒也 非以亓无諍與 故天下莫能與諍</del>
 
 ### 30-80
 
