标记删除 33-68 「善用人者爲之下」不符《道德经》之意

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -794,15 +794,15 @@
 
 > <del>夫茲 以戰則勝 以守則固 天將建之 如以茲垣之</del>
 
-### 33-68
+### <del>33-68</del>
 
-#### 不爭
+#### <del>不爭</del>
 
-> 善爲士者不武 善戰者不怒 善勝敵者弗與 善用人者爲之下
+> <del>善爲士者不武 善戰者不怒 善勝敵者弗與 善用人者爲之下</del>
 
 善于胜任士的人并不使用军事武力的手段。善于在战场上临敌的人并不会动怒。善于战胜敌人的人并不会与敌方交锋。善于让人们发挥作用的人会把自己的位置置于人们之下。
 
-> 是謂不爭之德 是謂用人 是謂天 古之極也
+> <del>是謂不爭之德 是謂用人 是謂天 古之極也</del>
 
 这就叫作不入竞争的德。
 
