--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1182,17 +1182,17 @@
 
 > 故貴爲身於爲天下 若可以托天下矣 愛以身爲天下 如可以寄天下矣
 
-### 58-14
+### <del>58-14</del>
 
-#### 道紀
+#### <del>道紀</del>
 
-> 視之而弗見 名之曰微 聽之而弗聞 名之曰希 捪之而弗得 名之曰夷 三者不可至計 故混而爲一
+> <del>視之而弗見 名之曰微 聽之而弗聞 名之曰希 捪之而弗得 名之曰夷 三者不可至計 故混而爲一</del>
 
-> 一者 亓上不攸 亓下不忽 尋尋呵 不可名也 復歸於无物
+> <del>一者 亓上不攸 亓下不忽 尋尋呵 不可名也 復歸於无物</del>
 
-> 是謂无狀之狀 无物之象 是謂惚恍 隨而不見亓後 迎而不見亓首
+> <del>是謂无狀之狀 无物之象 是謂惚恍 隨而不見亓後 迎而不見亓首</del>
 
-> 執今之道 以御今之有 以知古始 是謂道紀
+> <del>執今之道 以御今之有 以知古始 是謂道紀</del>
 
 ### <del>59-15</del>
 
