标记删除 69-25 「有物昆成 先天地生」不是道

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1326,23 +1326,23 @@
 
 与德保持一致的，道也会通过德为其赋能。
 
-### 69-25
+### <del>69-25</del>
 
-#### 昆成
+#### <del>昆成</del>
 
-> 有物昆成 先天地生
+> <del>有物昆成 先天地生</del>
 
-> 繡呵繆呵 獨立而不改 可以爲天地母
+> <del>繡呵繆呵 獨立而不改 可以爲天地母</del>
 
-> 吾未知亓名 字之曰道 吾強爲之名曰大
+> <del>吾未知亓名 字之曰道 吾強爲之名曰大</del>
 
-> 大曰筮 筮曰遠 遠曰反
+> <del>大曰筮 筮曰遠 遠曰反</del>
 
-> 道大 天大 地大 王亦大
+> <del>道大 天大 地大 王亦大</del>
 
-> 國中有四大 而王居一焉
+> <del>國中有四大 而王居一焉</del>
 
-> 人法地 地法天 天法道 道法自然
+> <del>人法地 地法天 天法道 道法自然</del>
 
 ### 70-26
 
