标记删除 2-39 推崇「一」不符合「德」的概念

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -86,13 +86,13 @@
 - 与实相反：「華」有虚、无的意涵。
 ```
 
-### 2-39
+### <del>2-39</del>
 
-#### 得一
+#### <del>得一</del>
 
-> 昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一以為天下正
+> <del>昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一以為天下正</del>
 
-> 亓致之也 謂天毋已清將恐裂 謂地毋已寧將恐發 謂神毋已霝將恐歇 謂浴毋已盈將恐竭 謂侯王毋已貴以高將恐蹶
+> <del>亓致之也 謂天毋已清將恐裂 謂地毋已寧將恐發 謂神毋已霝將恐歇 謂浴毋已盈將恐竭 謂侯王毋已貴以高將恐蹶</del>
 
 ```
 「亓致之也」：表示某一状态达到极致而突破极限，从而脱离该状态的范围。
@@ -104,9 +104,9 @@
 - 从在一元中到达极致，而离开该元，进入另一元。
 ```
 
-> 故必貴而以賤爲本 必高矣而以下爲基
+> <del>故必貴而以賤爲本 必高矣而以下爲基</del>
 
-> 夫是以侯王自謂曰孤 寡 不榖 此亓賤之爲本與 非也
+> <del>夫是以侯王自謂曰孤 寡 不榖 此亓賤之爲本與 非也</del>
 
 所以，侯王以孤、寡、不榖称呼自己，这是他们把低贱作为自己的基础吗？才不是呢。
 
@@ -116,7 +116,7 @@
 - 用在句尾表感歎。《詩•商頌•那》：猗與那與！
 ```
 
-> 故致數與无 與是 故不欲祿祿若玉 硌硌若石
+> <del>故致數與无 與是 故不欲祿祿若玉 硌硌若石</del>
 
 ```
 「致數」：单极的各种存在。
