标记删除 54-10 对「一」的推崇不符合「德」的概念

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1134,17 +1134,17 @@
 
 在完成了目的之后，把自己变化到更细粒度的维度中去，这是我们所处宇宙的行事方式。
 
-### 54-10
+### <del>54-10</del>
 
-#### 无不爲
+#### <del>无不爲</del>
 
-> 戴營魄抱一 能毋離乎 摶氣至柔 能嬰兒乎
+> <del>戴營魄抱一 能毋離乎 摶氣至柔 能嬰兒乎</del>
 
-> 脩除玄鑒 能毋疵乎 愛民栝國 能毋以知乎
+> <del>脩除玄鑒 能毋疵乎 愛民栝國 能毋以知乎</del>
 
-> 天門啓闔 能爲雌乎 明白四達 能毋以知乎
+> <del>天門啓闔 能爲雌乎 明白四達 能毋以知乎</del>
 
-> 生之 畜之 生而弗有 長而弗宰也 是謂玄德
+> <del>生之 畜之 生而弗有 長而弗宰也 是謂玄德</del>
 
 产生。滋养。产生但不占有。栽培但不支配和主宰。
 
