标记删除 67-22 推崇「一」不符合「德」的概念

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1296,19 +1296,19 @@
 
 > 亓在道也 曰餘食贅行 物或惡之 故有欲者弗居
 
-### 67-22
+### <del>67-22</del>
 
-#### 執一
+#### <del>執一</del>
 
-> 曲則全 枉則正 洼則盈 敝則新 少則得 多則惑
+> <del>曲則全 枉則正 洼則盈 敝則新 少則得 多則惑</del>
 
-> 是以聖人執一以爲天下牧
+> <del>是以聖人執一以爲天下牧</del>
 
-> 不自視故明 不自見故彰 不自伐故有功 弗矜故能長
+> <del>不自視故明 不自見故彰 不自伐故有功 弗矜故能長</del>
 
-> 夫唯不爭 故莫能與之爭
+> <del>夫唯不爭 故莫能與之爭</del>
 
-> 古之所謂曲全者 幾語才 誠全歸之
+> <del>古之所謂曲全者 幾語才 誠全歸之</del>
 
 ### 68-23
 
