更正帛书wiki文库版中多处错字「為」，应为「爲」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -16,7 +16,7 @@
 - 某一方法符合基于（遵循）道的范式的这种状态。
 ```
 
-> 上德无爲 而无以爲也 上仁爲之 而无以爲也 上義為之 而有以爲也 上禮爲之 而莫之應也 則攘臂而扔之
+> 上德无爲 而无以爲也 上仁爲之 而无以爲也 上義爲之 而有以爲也 上禮爲之 而莫之應也 則攘臂而扔之
 
 上德，符合基于（遵循）道的范式的这种状态的方法，不行动，无目的；上仁，上等的无差别向外广泛散发的爱、慈、亲，有行动，无目的；上义，上等的内心意识施加的规约（规范、约束），有行动，有目的；上礼，上等的外表形式施加的规约（规范、约束），有行动，却毫无回应。既然上礼根本不起任何作用，那么当然就捋起袖子用力把上礼扔掉。
 
@@ -90,7 +90,7 @@
 
 #### <del>得一</del>
 
-> <del>昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一以為天下正</del>
+> <del>昔之得一者 天得一以清 地得一以寧 神得一以霝 浴得一以盈 侯王得一以爲天下正</del>
 
 > <del>亓致之也 謂天毋已清將恐裂 謂地毋已寧將恐發 謂神毋已霝將恐歇 謂浴毋已盈將恐竭 謂侯王毋已貴以高將恐蹶</del>
 
@@ -112,7 +112,7 @@
 
 ```
 「與」：有语气词的用法。
-- 用在句尾表疑問。《墨子•明鬼下》：豈女為之與，意鮑為之與？ 
+- 用在句尾表疑問。《墨子•明鬼下》：豈女爲之與，意鮑爲之與？ 
 - 用在句尾表感歎。《詩•商頌•那》：猗與那與！
 ```
 
@@ -264,11 +264,11 @@
 
 > 天下之至柔 馳騁於天下之致堅
 
-> 无有入於无間 吾是以知无為之有益
+> 无有入於无間 吾是以知无爲之有益
 
 无形的能够进入没有任何缝隙之处。
 
-> 不言之教 无為之益 天下希能及之矣
+> 不言之教 无爲之益 天下希能及之矣
 
 ### 7-44
 
@@ -310,7 +310,7 @@
 
 > 亓出也彌遠 亓知也彌少
 
-> 是以聖人不行而知 不見而名 弗為而成
+> 是以聖人不行而知 不見而名 弗爲而成
 
 ### 11-48
 
@@ -328,7 +328,7 @@
 
 #### 德善
 
-> 聖人恆无心 以百姓之心為心
+> 聖人恆无心 以百姓之心爲心
 
 > 善者善之 不善者亦善之 德善也
 
@@ -338,7 +338,7 @@
 
 相信的人会相信；不相信的人也会相信。
 
-> 聖人之在天下 歙歙焉 為天下渾心 百姓皆屬耳目焉 聖人皆咳之
+> 聖人之在天下 歙歙焉 爲天下渾心 百姓皆屬耳目焉 聖人皆咳之
 
 ### 13-50
 
@@ -369,7 +369,7 @@
 - 类似用法：
 -- 「亓正閔閔 亓民屯屯 亓正察察 亓邦夬夬」
 -- 「綿綿呵若存」
--- 「聖人之在天下 歙歙焉 為天下渾心」
+-- 「聖人之在天下 歙歙焉 爲天下渾心」
 - 体会、比较单字与双连字用法的区别：
 -- 「正閔閔」、「正閔」
 -- 「民屯屯」、「民屯」
@@ -513,7 +513,7 @@
 
 > 塞亓兌 閉亓門 和亓光 同亓塵 挫亓銳 解亓紛 是謂玄同
 
-> 故不可得而親 亦不可得而疏 不可得而利 亦不可得而害 不可得而貴 亦不可得而賤 故為天下貴
+> 故不可得而親 亦不可得而疏 不可得而利 亦不可得而害 不可得而貴 亦不可得而賤 故爲天下貴
 
 ### <del>20-57</del>
 
@@ -885,7 +885,7 @@
 
 > 若民恆且不畏死 奈何以殺懼之也
 
-> 若民恆是畏死 則而為者 吾得而殺之 夫孰敢矣
+> 若民恆是畏死 則而爲者 吾得而殺之 夫孰敢矣
 
 > 若民恆且必畏死 則恆有司殺者
 
