标记删除 28-65 「爲道者」不符合道不可为

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -668,17 +668,17 @@
 
 > 是以聖人欲不欲 而不貴難得之貨 學不學 而復眾人之所過 能輔萬物之自然 而弗敢爲
 
-### 28-65
+### <del>28-65</del>
 
-#### 玄德
+#### <del>玄德</del>
 
-> 故曰 爲道者非以明民也 將以愚之也 民之難治也 以亓知也
+> <del>故曰 爲道者非以明民也 將以愚之也 民之難治也 以亓知也</del>
 
-> 故以知知邦 邦之賊也 以不知知邦 邦之德也
+> <del>故以知知邦 邦之賊也 以不知知邦 邦之德也</del>
 
-> 恆知此兩者 亦稽式也 恆知稽式 此謂玄德
+> <del>恆知此兩者 亦稽式也 恆知稽式 此謂玄德</del>
 
-> 玄德深矣 遠矣 與物反矣 乃至大順
+> <del>玄德深矣 遠矣 與物反矣 乃至大順</del>
 
 ```
 28-65 开篇即为「故曰」，显然该篇另有其他内容居前。
