标记删除 16-53 「使我挈有知也」露怯，并「使我」用法不合圣人角度

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -473,15 +473,15 @@
 
 > <del>毋遺身殃 是謂襲常</del>
 
-### 16-53
+### <del>16-53</del>
 
-#### 盜竽
+#### <del>盜竽</del>
 
-> 使我挈有知也 行於大道 唯施是畏
+> <del>使我挈有知也 行於大道 唯施是畏</del>
 
-> 大道甚夷 民甚好解
+> <del>大道甚夷 民甚好解</del>
 
-> 朝甚除 田甚蕪 倉甚虛 服文采 帶利劍 厭食而齎財有餘 是謂盜竽 非道也
+> <del>朝甚除 田甚蕪 倉甚虛 服文采 帶利劍 厭食而齎財有餘 是謂盜竽 非道也</del>
 
 ### 17-54
 
