标记删除 4-40 保留「反也者 道之動也 弱也者 道之用也」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -151,9 +151,9 @@
 
 只有道，既善于起始，又善于完成。
 
-### 4-40
+### <del>4-40</del>
 
-#### 反復
+#### <del>反復</del>
 
 > 反也者 道之動也 弱也者 道之用也
 
@@ -164,9 +164,10 @@
 - 「无欲」：类似于「道之動」。只描述客观视角可察的状态。
 - 「有欲」：「道之用」。不是类似，而是同样。「用」有隐含的由意志驱使的层面。
 「弱也者」：不是弱者的意思。
+该段本属于 5-42 的第一段，由后人插入符合易经的「天下之物生於有 有生於无」而拆为两篇。
 ```
 
-> 天下之物生於有 有生於无
+> <del>天下之物生於有 有生於无</del>
 
 宇宙中的东西产生于有，有产生于无。
 
@@ -234,10 +235,13 @@
 ```
 
 ```
-4-40与5-42两篇应为同一篇被后人拆分成了两篇，即：
+4-40与5-42两篇：
+- 本应为同一篇。
+- 被后人插入符合易经的「天下之物生於有 有生於无」后拆分为两篇。
+- 「反也者 道之動也 弱也者 道之用也」之尾「道」与「道生一 一生二 二生三 三生萬物」之首「道」衔接。
+- 「道生一 一生二 二生三 三生萬物」之尾「萬物」与「萬物負陰而抱陽 中氣以爲和」之首「萬物」衔接。
 
 反也者 道之動也 弱也者 道之用也
-天下之物生於有 有生於无
 道生一 一生二 二生三 三生萬物
 萬物負陰而抱陽 中氣以爲和
 天下之所惡 唯孤 寡 不穀 而王公以自名也
@@ -246,7 +250,6 @@
 
 该篇的完整逻辑顺序，以行为单位逐行看：
 - 从被中和者（同时也是警告的对象）的主观视角，看道规约的中和。
-- 从离读者最近的万物，溯源至有，再至更远的无。
 - 从离读者最远的道，衍生至离读者最近的万物。
 - 从离读者最近的万物层面，从全局视角，看无处不在的中和。
 - 基于中和，引入反面例子。
