标记删除 68-23「天地而弗能久」违背「天長地久 天地之所以能長且久者」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1313,19 +1313,19 @@
 
 > <del>古之所謂曲全者 幾語才 誠全歸之</del>
 
-### 68-23
+### <del>68-23</del>
 
-#### 同道
+#### <del>同道</del>
 
-> 希言自然
+> <del>希言自然</del>
 
-> 飄風不終朝 暴雨不終日
+> <del>飄風不終朝 暴雨不終日</del>
 
-> 孰爲此 天地而弗能久 又況於人乎
+> <del>孰爲此 天地而弗能久 又況於人乎</del>
 
-> 故從事而道者同於道 德者同於德 失者同於失
+> <del>故從事而道者同於道 德者同於德 失者同於失</del>
 
-> 同於德者 道亦德之 同於失者 道亦失之
+> <del>同於德者 道亦德之 同於失者 道亦失之</del>
 
 与德保持一致的，道也会通过德为其赋能。
 
