标记删除 8-45 「正」不属于《道德经》概念网络

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -285,13 +285,13 @@
 
 > 故知足不辱 知止不殆 可以長久
 
-### 8-45
+### <del>8-45</del>
 
-#### 請靚
+#### <del>請靚</del>
 
-> 大成若缺 亓用不幣 大盈若沖 亓用不窮 大直如詘 大巧如拙 大贏如㶧
+> <del>大成若缺 亓用不幣 大盈若沖 亓用不窮 大直如詘 大巧如拙 大贏如㶧</del>
 
-> 趮勝寒 靚勝炅 請靚可以爲天下正
+> <del>趮勝寒 靚勝炅 請靚可以爲天下正</del>
 
 ### 9-46
 
