标记删除 24-61 50-6 「牝」是易经概念

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -562,19 +562,19 @@
 
 > 夫兩不相傷 故德交歸焉
 
-### 24-61
+### <del>24-61</del>
 
-#### 處下
+#### <del>處下</del>
 
-> 大邦者 下流也 天下之牝 天下之交也
+> <del>大邦者 下流也 天下之牝 天下之交也</del>
 
-> 牝恆以靚勝牡 爲亓靚也 故宜爲下
+> <del>牝恆以靚勝牡 爲亓靚也 故宜爲下</del>
 
-> 大邦以下小邦 則取小邦 小邦以下大邦 則取於大邦 故或下以取 或下而取
+> <del>大邦以下小邦 則取小邦 小邦以下大邦 則取於大邦 故或下以取 或下而取</del>
 
-> 故大邦者 不過欲兼畜人 小邦者 不過欲入事人
+> <del>故大邦者 不過欲兼畜人 小邦者 不過欲入事人</del>
 
-> 夫皆得亓欲 則大者宜爲下
+> <del>夫皆得亓欲 則大者宜爲下</del>
 
 ### 25-62
 
@@ -1065,15 +1065,15 @@
 
 > 多聞數窮 不若守於中
 
-### 50-6
+### <del>50-6</del>
 
-#### 浴神
+#### <del>浴神</del>
 
-> 浴神不死 是謂玄牝
+> <del>浴神不死 是謂玄牝</del>
 
-> 玄牝之門 是謂天地之根
+> <del>玄牝之門 是謂天地之根</del>
 
-> 綿綿呵若存 用之不堇
+> <del>綿綿呵若存 用之不堇</del>
 
 ### 51-7
 
