标记删除 73-29 「夫天下 神器也」毫无《道德经》根据

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1385,21 +1385,21 @@
 
 > <del>樸散則爲器 聖人用則爲官長 夫大制无割</del>
 
-### 73-29
+### <del>73-29</del>
 
-#### 自然
+#### <del>自然</del>
 
-> 將欲取天下而爲之 吾見亓弗得已
+> <del>將欲取天下而爲之 吾見亓弗得已</del>
 
-> 夫天下 神器也 非可爲者也
+> <del>夫天下 神器也 非可爲者也</del>
 
-> 爲者敗之 執者失之
+> <del>爲者敗之 執者失之</del>
 
 做的人会败坏它；持有的人会失去它。
 
-> 物或行或隨 或炅或吹 或強或䂳 或培或橢
+> <del>物或行或隨 或炅或吹 或強或䂳 或培或橢</del>
 
-> 是以聖人去甚 去大 去楮
+> <del>是以聖人去甚 去大 去楮</del>
 
 ### 74-30
 
