标记删除 43-78 「易」此种含义全经唯一，「天下之王」之称狂妄

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -930,17 +930,17 @@
 
 > 是以聖人爲而弗有 成功而弗居也 若此 亓不欲見賢也
 
-### 43-78
+### <del>43-78</del>
 
-#### 水德
+#### <del>水德</del>
 
-> 天下莫柔弱於水 而攻堅強者莫之能先也 以亓无以易之
+> <del>天下莫柔弱於水 而攻堅強者莫之能先也 以亓无以易之</del>
 
-> 水之勝剛 弱之勝強 天下莫弗知 而莫能行也
+> <del>水之勝剛 弱之勝強 天下莫弗知 而莫能行也</del>
 
-> 故聖人之言云 曰受邦之詬 是謂社稷之主 受邦之不祥 是謂天下之王
+> <del>故聖人之言云 曰受邦之詬 是謂社稷之主 受邦之不祥 是謂天下之王</del>
 
-> 正言若反
+> <del>正言若反</del>
 
 ### 44-79
 
