标记删除 49-5 「天地之間」非道，却以道为蓝本描述，「多聞數窮」违背「聞道者日損 損之又損」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1055,15 +1055,15 @@
 
 > 湛呵 似或存 吾不知誰子也 象帝之先
 
-### 49-5
+### <del>49-5</del>
 
-#### 用中
+#### <del>用中</del>
 
-> 天地不仁 以萬物爲芻狗 聖人不仁 以百姓爲芻狗
+> <del>天地不仁 以萬物爲芻狗 聖人不仁 以百姓爲芻狗</del>
 
-> 天地之間 亓猶橐籥與 虛而不淈 動而俞出
+> <del>天地之間 亓猶橐籥與 虛而不淈 動而俞出</del>
 
-> 多聞數窮 不若守於中
+> <del>多聞數窮 不若守於中</del>
 
 ### <del>50-6</del>
 
