完成 19-56 注释，并标记删除其最后一段

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -514,9 +514,22 @@
 
 > 知者弗言 言者弗知
 
+知道的人不表露；表露的人不知道。
+
 > 塞亓兌 閉亓門 和亓光 同亓塵 挫亓銳 解亓紛 是謂玄同
 
-> 故不可得而親 亦不可得而疏 不可得而利 亦不可得而害 不可得而貴 亦不可得而賤 故爲天下貴
+堵住无知者的口，关闭无知者的嘴，弱化无知者的亮度，收拢无知者的散播，盖住无知者的锋芒，解开无知者的纷繁，这指的就是对无知者的深奥收纳。
+
+```
+「亓」：结构上衔接上文。指的是「言者弗知」中的「言者」。
+```
+
+> <del>故不可得而親 亦不可得而疏 不可得而利 亦不可得而害 不可得而貴 亦不可得而賤 故爲天下貴</del>
+
+```
+该段与前文毫无联系。
+「天下貴」的例子：「道者 萬物之注也 善人之寳也 不善人之所寳也 …… 古之所以貴此者何也 不胃求以得 有罪以免輿 故爲天下貴」
+```
 
 ### <del>20-57</del>
 
