标记删除 27-64 「爲之者敗之 執之者失之」经中无解释，「故慎終若始 則无敗事矣」无德道逻辑基础

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -672,17 +672,17 @@
 
 > 是以聖人猶難之 故終於无難
 
-### 27-64
+### <del>27-64</del>
 
-#### 輔物
+#### <del>輔物</del>
 
-> 亓安也 易持也 亓未兆也 易謀也 亓脆也 易判也 亓微也 易散也 爲之於亓未有也 治之於亓未亂也
+> <del>亓安也 易持也 亓未兆也 易謀也 亓脆也 易判也 亓微也 易散也 爲之於亓未有也 治之於亓未亂也</del>
 
-> 合抱之木 生於毫末 九成之臺 作於羸土 百仞之高 始於足下
+> <del>合抱之木 生於毫末 九成之臺 作於羸土 百仞之高 始於足下</del>
 
-> 爲之者敗之 執之者失之 是以聖人无爲也 故无敗也 无執也 故无失也 民之從事也 恆於亓成而敗之 故慎終若始 則无敗事矣
+> <del>爲之者敗之 執之者失之 是以聖人无爲也 故无敗也 无執也 故无失也 民之從事也 恆於亓成而敗之 故慎終若始 則无敗事矣</del>
 
-> 是以聖人欲不欲 而不貴難得之貨 學不學 而復眾人之所過 能輔萬物之自然 而弗敢爲
+> <del>是以聖人欲不欲 而不貴難得之貨 學不學 而復眾人之所過 能輔萬物之自然 而弗敢爲</del>
 
 ### <del>28-65</del>
 
