标记删除 34-69 「哀者勝」与「吾寶」无关

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -822,15 +822,15 @@
 
 这就叫作不入竞争的德。
 
-### 34-69
+### <del>34-69</del>
 
-#### 用兵
+#### <del>用兵</del>
 
-> 用兵有言曰 吾不敢爲主而爲客 不敢進寸而芮尺
+> <del>用兵有言曰 吾不敢爲主而爲客 不敢進寸而芮尺</del>
 
-> 是謂行无行 攘无臂 執无兵 乃无敵矣
+> <del>是謂行无行 攘无臂 執无兵 乃无敵矣</del>
 
-> 禍莫大於无適 无適近亡吾寶矣
+> <del>禍莫大於无適 无適近亡吾寶矣</del>
 
 ```
 「吾寶」：
@@ -839,7 +839,7 @@
 - 「寶」：「道者」
 ```
 
-> 故稱兵相若 則哀者勝矣
+> <del>故稱兵相若 則哀者勝矣</del>
 
 ### 35-70
 
