标记删除 74-30「物壯而老 是謂之不道 不道蚤已」完整抄袭「物壯即老 謂之不道 不道早已」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1414,19 +1414,19 @@
 
 > <del>是以聖人去甚 去大 去楮</del>
 
-### 74-30
+### <del>74-30</del>
 
-#### 不強
+#### <del>不強</del>
 
-> 以道佐人主 不以兵強於天下 亓事好還
+> <del>以道佐人主 不以兵強於天下 亓事好還</del>
 
-> 師之所居 楚棘生之
+> <del>師之所居 楚棘生之</del>
 
-> 善者果而已矣 毋以取強焉
+> <del>善者果而已矣 毋以取強焉</del>
 
-> 果而毋驕 果而勿矜 果而勿伐 果而毋得已居 是謂果而不強
+> <del>果而毋驕 果而勿矜 果而勿伐 果而毋得已居 是謂果而不強</del>
 
-> 物壯而老 是謂之不道 不道蚤已
+> <del>物壯而老 是謂之不道 不道蚤已</del>
 
 ### 75-31
 
