标记删除 70-26「清爲趮君 」不符合「和」的概念

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1360,19 +1360,19 @@
 
 > <del>人法地 地法天 天法道 道法自然</del>
 
-### 70-26
+### <del>70-26</del>
 
-#### 輜重
+#### <del>輜重</del>
 
-> 重爲巠根 清爲趮君
+> <del>重爲巠根 清爲趮君</del>
 
-> 是以君子眾日行 不離亓甾重
+> <del>是以君子眾日行 不離亓甾重</del>
 
-> 唯有環官 燕處則昭
+> <del>唯有環官 燕處則昭</del>
 
-> 若若何萬乘之王 而以身巠於天下
+> <del>若若何萬乘之王 而以身巠於天下</del>
 
-> 巠則失本 趮則失君
+> <del>巠則失本 趮則失君</del>
 
 ### <del>71-27</del>
 
