标记删除 57-13「托天下、寄天下」违背「爲而弗有 成功而弗居」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1184,19 +1184,19 @@
 
 > 是以聖人之治也 爲腹不爲目 故去彼取此
 
-### 57-13
+### <del>57-13</del>
 
-#### 寵辱
+#### <del>寵辱</del>
 
-> 寵辱若驚 貴大患若身
+> <del>寵辱若驚 貴大患若身</del>
 
-> 何謂寵辱若驚 寵之爲下 得之若驚 失之若驚 是謂寵辱若驚
+> <del>何謂寵辱若驚 寵之爲下 得之若驚 失之若驚 是謂寵辱若驚</del>
 
-> 何謂貴大患若身 吾所以有大患者 爲吾有身也 及吾无身 有何患
+> <del>何謂貴大患若身 吾所以有大患者 爲吾有身也 及吾无身 有何患</del>
 
 我会有大麻烦的原因，在于我有身体。等我没有身体，我还会有什么麻烦呢？
 
-> 故貴爲身於爲天下 若可以托天下矣 愛以身爲天下 如可以寄天下矣
+> <del>故貴爲身於爲天下 若可以托天下矣 愛以身爲天下 如可以寄天下矣</del>
 
 ### <del>58-14</del>
 
