标记删除 48-4「亓」无指代对象，且抄袭「塞亓兌 閉亓門 和亓光 同亓塵 挫亓銳 解亓紛」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1058,15 +1058,15 @@
 
 > 恆使民无知无欲也 使夫知不敢 弗爲而已 則无不治矣
 
-### 48-4
+### <del>48-4</del>
 
-#### 道用
+#### <del>道用</del>
 
-> 道沖 而用之有弗盈也 潚呵 始萬物之宗
+> <del>道沖 而用之有弗盈也 潚呵 始萬物之宗</del>
 
-> 銼亓兌 解亓紛 和亓光 同亓塵
+> <del>銼亓兌 解亓紛 和亓光 同亓塵</del>
 
-> 湛呵 似或存 吾不知誰子也 象帝之先
+> <del>湛呵 似或存 吾不知誰子也 象帝之先</del>
 
 ### <del>49-5</del>
 
