标记删除 65-21「請」无经文联系

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1290,19 +1290,19 @@
 
 > <del>眾人皆有以 我獨頑以悝 吾欲獨異於人 而貴食母</del>
 
-### 65-21
+### <del>65-21</del>
 
-#### 從道
+#### <del>從道</del>
 
-> 孔德之容 唯道是從 道之物 唯朢唯忽
+> <del>孔德之容 唯道是從 道之物 唯朢唯忽</del>
 
 从一个视觉非常受限的小洞窥视德的样子，可以发现德只遵循道。
 
-> 忽呵望呵 中有象呵 朢呵忽呵 中有物呵 幽呵鳴呵 中有請呵 亓請甚真 亓中有信
+> <del>忽呵望呵 中有象呵 朢呵忽呵 中有物呵 幽呵鳴呵 中有請呵 亓請甚真 亓中有信</del>
 
-> 自今及古 亓名不去 以順眾父
+> <del>自今及古 亓名不去 以順眾父</del>
 
-> 吾何以知眾父之祭 以此
+> <del>吾何以知眾父之祭 以此</del>
 
 ### 66-24
 
