标记删除 39-74「吾得而殺之」非圣人口吻

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -895,17 +895,17 @@
 
 我们所处宇宙中的规律不仅多，而且像一张巨大的网一样装着一切。网上规律不占据的地方全是空间，可什么都无法逃离。
 
-### 39-74
+### <del>39-74</del>
 
-#### 司殺
+#### <del>司殺</del>
 
-> 若民恆且不畏死 奈何以殺懼之也
+> <del>若民恆且不畏死 奈何以殺懼之也</del>
 
-> 若民恆是畏死 則而爲者 吾得而殺之 夫孰敢矣
+> <del>若民恆是畏死 則而爲者 吾得而殺之 夫孰敢矣</del>
 
-> 若民恆且必畏死 則恆有司殺者
+> <del>若民恆且必畏死 則恆有司殺者</del>
 
-> 夫代司殺者殺 是代大匠斵也 夫代大匠斵者 則希不傷亓手矣
+> <del>夫代司殺者殺 是代大匠斵也 夫代大匠斵者 則希不傷亓手矣</del>
 
 ### 40-75
 
