标记删除 38-73「天之道…善勝」违背「利而不害」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -881,17 +881,17 @@
 
 > 是以聖人 自知而不自見也 自愛而不自貴也 故去彼取此
 
-### 38-73
+### <del>38-73</del>
 
-#### 天網
+#### <del>天網</del>
 
-> 勇於敢者則殺 勇於不敢者則栝 此兩者或利或害
+> <del>勇於敢者則殺 勇於不敢者則栝 此兩者或利或害</del>
 
-> 天之所惡 孰知亓故
+> <del>天之所惡 孰知亓故</del>
 
-> 天之道 不彈而善勝 不言而善應 不召而自來 彈而善謀
+> <del>天之道 不彈而善勝 不言而善應 不召而自來 彈而善謀</del>
 
-> 天網恢恢 疏而不失
+> <del>天網恢恢 疏而不失</del>
 
 我们所处宇宙中的规律不仅多，而且像一张巨大的网一样装着一切。网上规律不占据的地方全是空间，可什么都无法逃离。
 
