标记删除 66-24, 75-31「有欲者」非圣人所欲也

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1304,13 +1304,13 @@
 
 > <del>吾何以知眾父之祭 以此</del>
 
-### 66-24
+### <del>66-24</del>
 
-#### 弗居
+#### <del>弗居</del>
 
-> 炊者不立 自視者不彰 自見者不明 自伐者无功 自矜者不長
+> <del>炊者不立 自視者不彰 自見者不明 自伐者无功 自矜者不長</del>
 
-> 亓在道也 曰餘食贅行 物或惡之 故有欲者弗居
+> <del>亓在道也 曰餘食贅行 物或惡之 故有欲者弗居</del>
 
 ### <del>67-22</del>
 
@@ -1428,25 +1428,25 @@
 
 > <del>物壯而老 是謂之不道 不道蚤已</del>
 
-### 75-31
+### <del>75-31</del>
 
-#### 貴左
+#### <del>貴左</del>
 
-> 夫兵者 不祥之器也 物或惡之 故有欲者弗居
+> <del>夫兵者 不祥之器也 物或惡之 故有欲者弗居</del>
 
-> 君子居則貴左 用兵則貴右
+> <del>君子居則貴左 用兵則貴右</del>
 
-> 故兵者 非君子之器也 兵者 不祥之器也 不得已而用之 銛龐爲上
+> <del>故兵者 非君子之器也 兵者 不祥之器也 不得已而用之 銛龐爲上</del>
 
-> 勿美也 若美之 是樂殺人也
+> <del>勿美也 若美之 是樂殺人也</del>
 
-> 夫樂殺人 不可以得志於天下矣
+> <del>夫樂殺人 不可以得志於天下矣</del>
 
-> 是以吉事上左 喪事上右
+> <del>是以吉事上左 喪事上右</del>
 
-> 是以偏將軍居左 上將軍居右 言以喪禮居之也
+> <del>是以偏將軍居左 上將軍居右 言以喪禮居之也</del>
 
-> 殺人眾 以悲依立之 戰勝 以喪禮處之
+> <del>殺人眾 以悲依立之 戰勝 以喪禮處之</del>
 
 ### <del>76-32</del>
 
