--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -700,9 +700,15 @@
 
 > 不出於戶 以知天下 不窺於牖 以知天道
 
+不出门，才能了解宇宙。不从窗格向外看，才能了解宇宙范围内的道。
+
 > 亓出也彌遠 亓知也彌少
 
+出门越远，了解越少。
+
 > 是以聖人不行而知 不見而名 弗爲而成
+
+因此，圣人不出行却了解，不显露却有名，不做功却实现。
 
 <div style="text-align: right;">36-71</div>
 
