--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -714,7 +714,11 @@
 
 > 知不知 尚矣 不知不知 病矣
 
+了解自己不了解，（思维上）是上等的。不了解自己不了解，（思维上）是不健康的。
+
 > 是以聖人之不病 以亓病病也 是以不病
+
+因此，圣人之所以（思维上）健康，是因为其以（思维上）不健康为不健康，因此才不会（思维上）不健康。
 
 <div style="text-align: right;">19-56</div>
 
