--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -690,9 +690,15 @@
 
 > 治大國 若烹小鮮
 
+治大国，像烹饪又小又鲜的食材一样。
+
 > 以道立天下 亓鬼不神 非亓鬼不神也 亓神不傷人也 非亓神不傷人也 聖人亦弗傷也
 
+用符合道的方式为体系治理宇宙，相关的鬼就不显神通。不是这些鬼没有神通，是这些鬼的神通不会对人造成损伤。不单是这些鬼的神通不会对人造成损伤，圣人也不会对人造成损伤。
+
 > 夫兩不相傷 故德交歸焉
+
+（鬼与圣人）都不损伤人，所以，（鬼、圣人与用符合道的方式为体系治理宇宙的方面所尊奉的道是同一个道）相应的德有交集的部分，用符合道的方式为体系治理宇宙的方面具有这部分德的交集。
 
 ## 知圣人
 
