新增结构方面注释并以此更新全经结构

--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -2,9 +2,9 @@
 
 *老子 · Liwei Zhang*
 
-## 开篇-显示全经结构-引入道
+## 开篇与提要
 
-<div style="text-align: right;">31-81</div>
+<div style="text-align: right;">显露<i>天之道</i>在前、<i>人之道</i>在后的全经经文顺序 31-81</div>
 
 > 信言不美 美言不信 知者不博 博者不知 善者不多 多者不善
 
@@ -76,7 +76,7 @@
 - 圣人，作为像天一样高于人类的存在。这是由与上一段中的对应结构而表明的。
 ```
 
-<div style="text-align: right;">46-2</div>
+<div style="text-align: right;">释<i>恆</i> 46-2</div>
 
 > 天下皆知美 爲美惡已 皆知善 訾不善矣
 
@@ -117,7 +117,7 @@
 
 对于任何事物，要从事的话，就不要从启动的那部分着手；要行动的话，就不要依赖行动，而要以目标为本；要达成目标的话，就不要放不下成果。只有放下了，才不会失去。
 
-<div style="text-align: right;">9-46</div>
+<div style="text-align: right;">释<i>罪</i> 9-46</div>
 
 > 天下有道 卻走馬以糞 天下无道 戎馬生於郊
 
@@ -125,7 +125,9 @@
 
 > 故知足之足 恆足矣
 
-<div style="text-align: right;">25-62</div>
+## 道
+
+<div style="text-align: right;">释<i>道、寳</i> 25-62</div>
 
 > 道者 萬物之注也 善人之寳也 不善人之所寳也
 
@@ -190,7 +192,7 @@
 - 因此，所有人都有罪。
 ```
 
-<div style="text-align: right;">42-77</div>
+<div style="text-align: right;">释<i>天下之道</i> 42-77</div>
 
 > 天下之道 猶張弓者也 高者抑之 下者舉之 有餘者損之 不足者補之
 
@@ -291,7 +293,7 @@
 - 警告对象于开篇即被指向、于篇中被点明、于篇尾被呼应。
 ```
 
-<div style="text-align: right;">45-1</div>
+<div style="text-align: right;">释<i>恆道</i> 45-1</div>
 
 > 道可道也 非恆道也
 
@@ -329,9 +331,9 @@
 - 一个子规律空间内的玄这种给人的感觉，在进一步向恒道的方向上的任何一个子规律空间内仍然如是。
 ```
 
-## 引入德
+## 德
 
-<div style="text-align: right;">14-51</div>
+<div style="text-align: right;">释<i>德、玄德</i> 14-51</div>
 
 > 道生之而德畜之 物形之而器成之
 
@@ -370,7 +372,7 @@
 - 由具象变换到抽象指代动作、行为。
 ```
 
-<div style="text-align: right;">1-38</div>
+<div style="text-align: right;">释<i>上德、下德、上仁、上義、禮</i> 1-38</div>
 
 > 上德不德 是以有德 下德不失德 是以无德
 
@@ -465,7 +467,7 @@
 - 与实相反：「華」有虚、无的意涵。
 ```
 
-<div style="text-align: right;">18-55</div>
+<div style="text-align: right;">释<i>德之厚、精之至、和之至、常、明、祥、強</i> 18-55</div>
 
 > 含德之厚者 比於赤子 蜂蠆虺蛇弗螫 攫鳥猛獸弗搏 骨弱筋柔而握固 未知牝牡之合而朘怒 精之至也 終日號而不嚘 和之至也
 
@@ -473,7 +475,7 @@
 
 > 物壯即老 謂之不道 不道早已
 
-<div style="text-align: right;">41-76</div>
+<div style="text-align: right;">释<i>死之徒、生之徒</i> 41-76</div>
 
 > 人之生也柔弱 亓死也恆仞堅強 萬物草木之生也柔脆 亓死也枯槁
 
@@ -578,9 +580,9 @@
 
 > 聖人之在天下 歙歙焉 爲天下渾心 百姓皆屬耳目焉 聖人皆咳之
 
-## 道和德
+## 天下
 
-<div style="text-align: right;">79-35</div>
+<div style="text-align: right;">释<i>道之出言</i> 79-35</div>
 
 > 執大象 天下往 往而不害 安平大
 
@@ -594,7 +596,7 @@
 该段可作为检验任何内容是否为基于「道」的一种测试，以过滤与「道」无关的内容。
 ```
 
-<div style="text-align: right;">3-41</div>
+<div style="text-align: right;">综述道、德 3-41</div>
 
 > 上士聞道 堇而行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
 
@@ -604,7 +606,7 @@
 
 只有道，既善于起始，又善于完成。
 
-<div style="text-align: right;">52-8</div>
+<div style="text-align: right;">释<i>上善、水幾於道</i> 52-8</div>
 
 > 上善治水 水善利萬物而有靜 居眾之所惡 故幾於道矣
 
@@ -630,7 +632,7 @@
 
 只有不争，因而杜绝遭受由过失招致的灾祸。
 
-<div style="text-align: right;">11-48</div>
+<div style="text-align: right;">释<i>不足以取天下</i> 11-48</div>
 
 > 爲學者日益 聞道者日損 損之又損 以至於无爲 无爲而无不爲
 
@@ -640,7 +642,7 @@
 
 > 將欲取天下也 恆无事 及亓有事也 不足以取天下
 
-<div style="text-align: right;">40-75</div>
+<div style="text-align: right;">释<i>有事、上有以爲</i> 40-75</div>
 
 > 人之饑也 以亓取食稅之多也 是以飢
 
@@ -668,7 +670,7 @@
 
 > 是以聖人猶難之 故終於无難
 
-<div style="text-align: right;">47-3</div>
+<div style="text-align: right;">释<i>聖人之治</i> 47-3</div>
 
 > 不上賢 使民不爭 不貴難得之貨 使民不爲盜 不見可欲 使民不亂
 
@@ -676,7 +678,7 @@
 
 > 恆使民无知无欲也 使夫知不敢 弗爲而已 則无不治矣
 
-<div style="text-align: right;">30-80</div>
+<div style="text-align: right;">释<i>小邦</i> 30-80</div>
 
 > 小邦寡民
 
@@ -686,7 +688,7 @@
 
 > 鄰邦相望 雞狗之聲相聞 民至老死 不相往來
 
-<div style="text-align: right;">23-60</div>
+<div style="text-align: right;">释<i>治大國、立天下</i> 23-60</div>
 
 > 治大國 若烹小鮮
 
@@ -700,7 +702,7 @@
 
 （鬼与圣人）都不损伤人，所以，（鬼、圣人与用符合道的方式为体系治理宇宙的方面所尊奉的道是同一个道）相应的德有交集的部分，用符合道的方式为体系治理宇宙的方面具有这部分德的交集。
 
-## 知圣人
+## 知圣
 
 <div style="text-align: right;">10-47</div>
 
@@ -716,7 +718,7 @@
 
 因此，圣人不出行却了解，不显露却有名，不做功却实现。
 
-<div style="text-align: right;">36-71</div>
+<div style="text-align: right;">释<i>病</i> 36-71</div>
 
 > 知不知 尚矣 不知不知 病矣
 
@@ -726,7 +728,7 @@
 
 因此，圣人之所以（思维上）健康，是因为其以（思维上）不健康为不健康，因此才不会（思维上）不健康。
 
-<div style="text-align: right;">19-56</div>
+<div style="text-align: right;">释<i>玄同</i> 19-56</div>
 
 > 知者弗言 言者弗知
 
@@ -740,7 +742,7 @@
 「亓」：结构上衔接上文。指的是「言者弗知」中的「言者」。
 ```
 
-<div style="text-align: right;">35-70</div>
+<div style="text-align: right;">释<i>吾言、我、聖人</i> 35-70</div>
 
 > 吾言甚易知也 甚易行也 而人莫之能知也 而莫之能行也
 
