--- a/道德经溯源本/texts/道德经溯源本.md
+++ b/道德经溯源本/texts/道德经溯源本.md
@@ -2,9 +2,9 @@
 
 *老子 · Liwei Zhang*
 
-## 开篇-显示全经结构-引入道
+## 开篇与提要
 
-<div style="text-align: right;">31-81</div>
+<div style="text-align: right;">显露<i>天之道</i>在前、<i>人之道</i>在后的全经经文顺序 31-81</div>
 
 > 信言不美 美言不信 知者不博 博者不知 善者不多 多者不善
 
@@ -12,7 +12,7 @@
 
 > 故天之道 利而不害 人之道 爲而弗爭
 
-<div style="text-align: right;">46-2</div>
+<div style="text-align: right;">释<i>恆</i> 46-2</div>
 
 > 天下皆知美 爲美惡已 皆知善 訾不善矣
 
@@ -22,7 +22,7 @@
 
 > 萬物 作而弗始也 爲而弗恃也 成功而弗居也 夫唯弗居 是以弗去
 
-<div style="text-align: right;">9-46</div>
+<div style="text-align: right;">释<i>罪</i> 9-46</div>
 
 > 天下有道 卻走馬以糞 天下无道 戎馬生於郊
 
@@ -30,7 +30,9 @@
 
 > 故知足之足 恆足矣
 
-<div style="text-align: right;">25-62</div>
+## 道
+
+<div style="text-align: right;">释<i>道、寳</i> 25-62</div>
 
 > 道者 萬物之注也 善人之寳也 不善人之所寳也
 
@@ -40,7 +42,7 @@
 
 > 古之所以貴此者何也 不胃求以得 有罪以免輿 故爲天下貴
 
-<div style="text-align: right;">42-77</div>
+<div style="text-align: right;">释<i>天下之道</i> 42-77</div>
 
 > 天下之道 猶張弓者也 高者抑之 下者舉之 有餘者損之 不足者補之
 
@@ -64,7 +66,7 @@
 
 > 故強良者不得死 我將以爲學父
 
-<div style="text-align: right;">45-1</div>
+<div style="text-align: right;">释<i>恆道</i> 45-1</div>
 
 > 道可道也 非恆道也
 
@@ -78,9 +80,9 @@
 
 > 兩者同出 異名同胃 玄之有玄 眾眇之門
 
-## 引入德
+## 德
 
-<div style="text-align: right;">14-51</div>
+<div style="text-align: right;">释<i>德、玄德</i> 14-51</div>
 
 > 道生之而德畜之 物形之而器成之
 
@@ -92,7 +94,7 @@
 
 > 生而弗有也 爲而弗恃也 長而弗宰也 此之謂玄德
 
-<div style="text-align: right;">1-38</div>
+<div style="text-align: right;">释<i>上德、下德、上仁、上義、禮</i> 1-38</div>
 
 > 上德不德 是以有德 下德不失德 是以无德
 
@@ -104,7 +106,7 @@
 
 > 是以大丈夫居亓厚而不居亓泊 居亓實而不居亓華 故去彼取此
 
-<div style="text-align: right;">18-55</div>
+<div style="text-align: right;">释<i>德之厚、精之至、和之至、常、明、祥、強</i> 18-55</div>
 
 > 含德之厚者 比於赤子 蜂蠆虺蛇弗螫 攫鳥猛獸弗搏 骨弱筋柔而握固 未知牝牡之合而朘怒 精之至也 終日號而不嚘 和之至也
 
@@ -112,7 +114,7 @@
 
 > 物壯即老 謂之不道 不道早已
 
-<div style="text-align: right;">41-76</div>
+<div style="text-align: right;">释<i>死之徒、生之徒</i> 41-76</div>
 
 > 人之生也柔弱 亓死也恆仞堅強 萬物草木之生也柔脆 亓死也枯槁
 
@@ -152,9 +154,9 @@
 
 > 聖人之在天下 歙歙焉 爲天下渾心 百姓皆屬耳目焉 聖人皆咳之
 
-## 道和德
+## 天下
 
-<div style="text-align: right;">79-35</div>
+<div style="text-align: right;">释<i>道之出言</i> 79-35</div>
 
 > 執大象 天下往 往而不害 安平大
 
@@ -162,7 +164,7 @@
 
 > 故道之出言也 曰淡呵亓无味也 視之不足見也 聽之不足聞也 用之不可既也
 
-<div style="text-align: right;">3-41</div>
+<div style="text-align: right;">综述道、德 3-41</div>
 
 > 上士聞道 堇而行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
 
@@ -170,7 +172,7 @@
 
 > 夫唯道 善始且善成
 
-<div style="text-align: right;">52-8</div>
+<div style="text-align: right;">释<i>上善、水幾於道</i> 52-8</div>
 
 > 上善治水 水善利萬物而有靜 居眾之所惡 故幾於道矣
 
@@ -178,13 +180,13 @@
 
 > 夫唯不爭 故无尤
 
-<div style="text-align: right;">11-48</div>
+<div style="text-align: right;">释<i>不足以取天下</i> 11-48</div>
 
 > 爲學者日益 聞道者日損 損之又損 以至於无爲 无爲而无不爲
 
 > 將欲取天下也 恆无事 及亓有事也 不足以取天下
 
-<div style="text-align: right;">40-75</div>
+<div style="text-align: right;">释<i>有事、上有以爲</i> 40-75</div>
 
 > 人之饑也 以亓取食稅之多也 是以飢
 
@@ -208,7 +210,7 @@
 
 > 是以聖人猶難之 故終於无難
 
-<div style="text-align: right;">47-3</div>
+<div style="text-align: right;">释<i>聖人之治</i> 47-3</div>
 
 > 不上賢 使民不爭 不貴難得之貨 使民不爲盜 不見可欲 使民不亂
 
@@ -216,7 +218,7 @@
 
 > 恆使民无知无欲也 使夫知不敢 弗爲而已 則无不治矣
 
-<div style="text-align: right;">30-80</div>
+<div style="text-align: right;">释<i>小邦</i> 30-80</div>
 
 > 小邦寡民
 
@@ -226,7 +228,7 @@
 
 > 鄰邦相望 雞狗之聲相聞 民至老死 不相往來
 
-<div style="text-align: right;">23-60</div>
+<div style="text-align: right;">释<i>治大國、立天下</i> 23-60</div>
 
 > 治大國 若烹小鮮
 
@@ -234,7 +236,7 @@
 
 > 夫兩不相傷 故德交歸焉
 
-## 知圣人
+## 知圣
 
 <div style="text-align: right;">10-47</div>
 
@@ -244,19 +246,19 @@
 
 > 是以聖人不行而知 不見而名 弗爲而成
 
-<div style="text-align: right;">36-71</div>
+<div style="text-align: right;">释<i>病</i> 36-71</div>
 
 > 知不知 尚矣 不知不知 病矣
 
 > 是以聖人之不病 以亓病病也 是以不病
 
-<div style="text-align: right;">19-56</div>
+<div style="text-align: right;">释<i>玄同</i> 19-56</div>
 
 > 知者弗言 言者弗知
 
 > 塞亓兌 閉亓門 和亓光 同亓塵 挫亓銳 解亓紛 是謂玄同
 
-<div style="text-align: right;">35-70</div>
+<div style="text-align: right;">释<i>吾言、我、聖人</i> 35-70</div>
 
 > 吾言甚易知也 甚易行也 而人莫之能知也 而莫之能行也
 
