--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -111,7 +111,11 @@
 
 > 有无之相生也 難易之相成也 長短之相形也 高下之相盈也 音聲之相和也 先後之相隨 恆也
 
+有与无互为存在的基础；难与易互为存在的基础；长与短互为存在的基础；高与下互为存在的基础；音与声互为存在的基础；先与后互为存在的基础。这就是恒定、不变。
+
 > 是以聖人居无爲之事 行不言之教
+
+因此，圣人置自己于不需要作为的事，实践不表露的传授。
 
 > 萬物 作而弗始也 爲而弗恃也 成功而弗居也 夫唯弗居 是以弗去
 
