--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -125,9 +125,21 @@
 
 > 天下有道 卻走馬以糞 天下无道 戎馬生於郊
 
+宇宙中处于符合利而不害的天之道时，道路上却是马匹走过而留下的粪便。宇宙中不处于符合利而不害的天之道时，战马于郊外出生。
+
+```
+「道」：兼具双重含意。
+- 道路。
+- 「天之道」中的道，「利而不害」。
+```
+
 > 罪莫大於可欲 禍莫大於不知足 咎莫憯於欲得
 
+没有比激发欲望滋生更大的罪孽；没有比不知道满足更大的灾祸；没有比追求获取的欲望更大的罪责。
+
 > 故知足之足 恆足矣
+
+所以，满足于知道满足是恒定、不变的满足。
 
 ## 道
 
