--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -212,11 +212,19 @@
 
 > 天下之道 猶張弓者也 高者抑之 下者舉之 有餘者損之 不足者補之
 
+宇宙中的这部分规律空间，好似一个人在拉开一张弓对准目标。个子高了，就要抑制瞄准时弓的高度；个子矮了，就要举高瞄准时弓的高度；力气大了，就要减少拉弓的力量；力气小了，就要增加拉弓的力量。
+
 > 故天之道 損有餘而益不足 人之道 損不足而奉有餘
+
+所以，宇宙的方式是：从多出的地方弥补缺少的地方；人的方式是：从缺少的地方集中到多出的地方。
 
 > 孰能有餘而有以取奉於天者 唯有道者乎
 
+有什么能够多出并且可以把多出的贡献给宇宙的方式？唯一能如此的是道。
+
 > 是以聖人爲而弗有 成功而弗居也 若此 亓不欲見賢也
+
+因此，圣人从事却不占有、事情实现却不停留于成功。像这样，圣人是不想显露自己的才能的。
 
 <div style="text-align: right;">5-42</div>
 
