--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -792,8 +792,29 @@
 
 > 善建者不拔 善抱者不脫 子孫以祭祀不絕
 
+善长构成的人，其所构成的不会被清除；善长追求的人，其所追求的不会得以脱离；传承使得后人们不断绝。
+
+```
+「建」：同样用法。
+- 「是以建言有之曰」
+- 「建德如偷」
+- 构成在此处是抽象的概念。分为构、成两个字。再由两个字代表的含意组合而成。
+
+「抱」
+- 同样用法：「萬物負陰而抱陽」
+- 因此，这种拥抱是积极主动，甚至包括攻击性的。
+
+「祭祀」：该行为表示不仅从生理上（由「子孫」表示），而且从认知上，是后代。
+```
+
 > 修之身 亓德乃真 修之家 亓德有餘 修之鄉 亓德乃長 修之邦 亓德乃豐 修之天下 亓德乃博
+
+本身修行，才能具有真实的德；家修行，才能具有多出来的德；社群修行，才能具有持续的德；国家修行，才能具有丰富的德；宇宙修行，才能具有广阔的德。
 
 > 以身觀身 以家觀家 以鄉觀鄉 以邦觀邦 以天下觀天下
 
+以身的修习为标尺看身的层面；以家的修习为标尺看家的层面；以社群的修习为标尺看社群的层面；以国家的修习为标尺看国家的层面；以宇宙的修习为标尺看宇宙的层面。
+
 > 吾何以知天下然茲 以此
+
+我如何知道宇宙中的种种？就是这样知道的。
