在2022年6月版本的基础上改进 45-1 解释，并初步完成

--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -321,32 +321,69 @@
 
 > 道可道也 非恆道也
 
-当人类称其能够（认识和）描述的那部分规律空间为「道」的时候，并未涵盖衍生出它的那部分规律空间，不是指「恒道」。
+当人类称其能够（认识和）描述的那部分规律空间为「道」的时候，是不涵盖其衍生出的那部分规律空间的，不是指「恒道」，即对人类而言恒定、不变的那部分规律空间。
 
-规律空间中衍生关系的存在意味着人类永远有无法涉及的那部分源头规律空间。由此，当正确使用「道」一词时，实际指向的是「恒道」。
+```
+「恆」：
+- 于该处，指的是对人类而言恒定、不变那部分中的一切。
+- 其对于人类而言是未知的。同时，人类又不知道什么是未知的。
+
+「恆道」：
+- 只是「恆」中规律空间的维度。
+- 不了解「恆」，自然无法了解「恆道」。
+
+规律空间中衍生关系的存在意味着人类永远有无法涉及的那部分源头规律空间。
+- 当正确使用「道」一词时，实际指向的是「恒道」。
+```
 
 > 名可名也 非恆名也
 
+当人类能够对一个对象使用称呼、指代的时候，不是指向对人类而言恒定、不变的那些。
+
+```
+对于人类不知道自己不知道的，人类无法命名。
+- 若用「未知」、「无」这类名词，只符合人类知道自己不知道的定义。
+
+「恆名」：
+- 不了解「恆」，自然无法给出「恆名」。
+```
+
 > 无名萬物之始也
+
+所有人类能够（认识和）描述的都衍生于人类无法使用称呼、指代的。
+
+```
+「萬物」：该词本身就是个人类使用的指代。属于「名可名」、「有名」。
+```
 
 > 有名萬物之母也
 
+所有人类能够（认识和）描述的都属于人类能够使用称呼、指代的。
+
 > 故恆无欲也 以觀亓眇 恆有欲也 以觀亓所噭
 
-因此，源头规律空间因其作用对象范围超然于人类的感知想象能力极限之外，人类唯有细致敏锐的捕捉才能有所体察；源头规律空间经由其衍生出的人类感知想象能力范围之内的规律发生作用，人类得以观察这种作用的范围和边界。
+所以，（当使用恒这个字指代恒定、不变那部分中的一切时）从人类角度看恒，其在人类的感知想象能力范围内的表现对于人类而言是自然而然的、天然的、毫无异动的、静的，以人类视角看，这是恒的一种无欲无求的常规状态，因而，人类唯有细致敏锐地捕捉才能有所体察；当人类能够在自己的感知想象能力范围内察觉到深远处传导而来的异动出现、不静的信号时，以人类视角看，恒不再是无欲无求的常态，而是表现出了某种意图，人类因而得以注视恒的信号。
 
-无欲、有欲指的是源头规律空间作用可触发人类感知想象的两种不同状态：处于飘渺存在的状态、处于可观测的状态。
+```
+「无欲」、「有欲」指的是恒的作用可触发人类感知想象的两种不同状态：
+- 处于飘渺存在的状态。
+- 处于可观测的状态。
+```
 
 > 兩者同出 異名同胃 玄之有玄 眾眇之門
 
+两者都来自于同一个存在，名字虽然不同，但都指向同一个存在。每一个规律都衍生于其依赖的粒度空间上的一个或多个规律。粒度依赖空间中直接的依赖与被依赖结构可以想象成叠加式的形态。而这些形态的不断展开可以想象成层层叠叠的样子。这样的衍生形态，从人可以认识和描述的的粒度向衍生的源头观察，这就是玄。而在人可观察和认识的玄的尽头仍旧存在这样的玄，最终，所有的人可感知的规则的源头都汇聚到一个空间，这仍然不是尽头，只不过是通向终极规律存在的路径上的一扇门。
+
 ```
 马王堆帛书版中，「又」字，甲使用0处，乙使用17处（依据当前版本[维基文库《道德经》甲乙对照本](https://zh.wikisource.org/wiki/老子_%28帛書本%29)）。
+
 「有」、「又」两个字导致的差异：
 - 「有」：有x，表达x的存在。
 - 「又」：又x，表达x的重复。
 - 「x之有x」：表示一种嵌套结构的存在。x以名词出现（若是形容词，于此则作名词用）。前后两个x未必处于同一维度（「有」字带来的效果，其具备指向不同维度的功能）。
 - 「x之又x」：表示x的重复。x既可以是名词，也可以是动词。前后两个x处于同一维度（「又」字带来的效果，指向同维度内的重复）。
 - 「x之又x」、「x之有x」虽然可以用以表示同样的事物，但也有表示不同事物的场景（如：指向不同维度的情况）。
+
 此处，「玄」：
 - 不是动词。
 - 虽然，有名词作动词的用法。但帛书甲中的「有」更符合形容词作名词的用法，而不必再进一步转换一次，使其变成动词。
