增加 45-1「兩者同出 異名同胃」注释

--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -375,6 +375,14 @@
 两者都来自于同一个存在，名字虽然不同，但都指向同一个存在。每一个规律都衍生于其依赖的粒度空间上的一个或多个规律。粒度依赖空间中直接的依赖与被依赖结构可以想象成叠加式的形态。而这些形态的不断展开可以想象成层层叠叠的样子。这样的衍生形态，从人可以认识和描述的的粒度向衍生的源头观察，这就是玄。而在人可观察和认识的玄的尽头仍旧存在这样的玄，最终，所有的人可感知的规则的源头都汇聚到一个空间，这仍然不是尽头，只不过是通向终极规律存在的路径上的一扇门。
 
 ```
+「兩者」：「眇」、「所噭」。
+
+「同出」：指向「恆」。
+
+「同胃」：指代「恆」在人类所处环境中的效果。
+- 区别：从人类视角出发的感知不同。
+- 「反也者 道之動也 弱也者 道之用也」中「動」与「用」也是人类对同类效果感知的不同。
+
 马王堆帛书版中，「又」字，甲使用0处，乙使用17处（依据当前版本[维基文库《道德经》甲乙对照本](https://zh.wikisource.org/wiki/老子_%28帛書本%29)）。
 
 「有」、「又」两个字导致的差异：
