--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -246,11 +246,15 @@
 
 > 道生一 一生二 二生三 三生萬物
 
+道经过层层衍生，一直衍生到人类能认知的一切。
+
 ```
 展示「规律空间（道）」模型的衍生性。
 ```
 
 > 萬物負陰而抱陽 中氣以爲和
+
+人类能认知的一切都可视为需求与被需求二元，需求方总是对被需求方展开追求，需求中由被需求满足的部分意味着相关的需求与被需求因为被满足与被占用而达到这些需求与被需求都不混沌的状态，这种状态就是和。
 
 ```
 展示「生、存、长……」模型的中和性。
@@ -261,6 +265,8 @@
 ```
 
 > 天下之所惡 唯孤 寡 不穀 而王公以自名也
+
+宇宙中都不想成为的，只有孤、寡、不穀，但是王公们却用这些名词称呼自己。
 
 ```
 指出王公们想作不可被中和的单极。而这是不符合「生、存、长……」模型中生之后的中和的。
