--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -546,9 +546,26 @@
 
 > 含德之厚者 比於赤子 蜂蠆虺蛇弗螫 攫鳥猛獸弗搏 骨弱筋柔而握固 未知牝牡之合而朘怒 精之至也 終日號而不嚘 和之至也
 
+当所含有的德浓重时，用刚出生的男婴作比喻的话：任何毒虫都不会对他叮咬；任何猛禽、猛兽都不会对他出手。他虽然骨头弱、筋柔软，但是他的手握东西已然十分牢固；他虽然根本不知道男女之合，但是他的勃起已然冲破天际，这就是精在顶峰的表现；他虽然从早到晚尽全力发声，但是他的声音却从来不会衰弱，这就是和在顶峰的表现。
+
 > 和曰常 知和曰明 益生曰祥 心使氣曰強
 
+和可以称作常态；了解和可以称作明；益于生可以称作祥；能够让自己的呼吸按照自己的意志而动可以称作强。
+
+```
+「常」：
+- 不表示恒定、不变。
+- 在《道德经》中，「常」与「恆」表示不同意思，不是同义词，无法互换使用。
+```
+
 > 物壯即老 謂之不道 不道早已
+
+任何事物，到了充分熟成的状态即开始走向衰弱。衰弱被称为不道。不道的存在时间是短暂的。
+
+```
+符合道的事物会随着道一直存在下去。
+- 进入事物周期中「壯」阶段的，无法随着道一直存在下去。这就是不道。
+```
 
 <div style="text-align: right;">释<i>死之徒、生之徒</i> 41-76</div>
 
