--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -571,11 +571,23 @@
 
 > 人之生也柔弱 亓死也恆仞堅強 萬物草木之生也柔脆 亓死也枯槁
 
+人出生时是柔弱的，其死亡时是如同完全没有弹性般的坚强的；万物草木生时是柔软脆弱的，其死亡时是枯槁的。
+
 > 故曰 堅強者 死之徒也 柔弱微細 生之徒也
+
+所以说，坚强是向着死而去的；柔弱微细是向着生而去的。
 
 > 兵強則不勝 木強則恆
 
+硬来的军队不会获胜；坚硬的树木毫无弹性。
+
+```
+「恆」：由不变，引申为毫无弹性。
+```
+
 > 強大居下 柔弱微細居上
+
+硬来的庞然大物是下等的；柔弱微細是上等的。
 
 <div style="text-align: right;">13-50</div>
 
