初步完成 51-7 解释，「與」更正为「輿」

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1098,7 +1098,7 @@
 
 因此智慧的人把自己变化到更细粒度的维度中去从而让自身居于前端；到更粗粒度的维度中去从而让自身得以保存。（在两种情况中，都由于去到了不同维度中而使可见度被极大地降低了。“芮”、“外”就是用于描述这两种状况的。人类系统在很多情况下可以被看作是一个由每一个人为一个元素组成的元素序列。在这种时候，很多状况有利于居于序列前端的人们。）
 
-> 不以亓无私與 故能成亓私
+> 不以亓无私輿 故能成亓私
 
 ### 52-8
 
