--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -666,9 +666,41 @@
 
 > 天長地久 天地之所以能長且久者 以亓不自生也 故能長生
 
+天长地久，天与地之所以能够长久，因为天与地本身不产生，所以才能够长久地生。
+
+```
+「生」：「道生之」表明道具备生的功能。
+
+「不自生」：自己本身不产生。
+
+「長生」：只有道才可能长久地生。
+
+天地如果自身发挥生的功能，那是不可能长久的。
+- 能够长久的只有道。
+- 只有道发挥的生的功能才可能长久。
+- 生，在该段中不是生存，而是「道生之」中的生的意思。
+```
+
 > 是以聖人芮亓身而身先 外亓身而身存
 
-> 不以亓无私與 故能成亓私
+因此，圣人把自己变化到更细粒度的维度中去从而让自身居于前端；到更粗粒度的维度中去从而让自身得以保存。（在两种情况中，都由于去到了不同维度中而使可见度被极大地降低了。“芮”、“外”就是用于描述这两种状况的。）
+
+```
+人类系统在很多情况下可以被看作是一个由每一个人为一个元素组成的元素序列。在这种时候，很多状况有利于居于序列前端的人们。
+```
+
+> 不以亓无私輿 故能成亓私
+
+不因为没有个体自身欲望带来的罪而导致的死亡，所以，能够实现其个体的需求。
+
+```
+「輿」：
+- 「有罪以免輿」
+- 「罪莫大於可欲」
+- 「可欲」与「私」关联密切。
+
+「私輿」：个体自身欲望带来的罪而导致的死亡。
+```
 
 <div style="text-align: right;">12-49</div>
 
