--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -706,15 +706,24 @@
 
 > 聖人恆无心 以百姓之心爲心
 
+圣人没有心，以人类系统的心作为自己的心。
+
 > 善者善之 不善者亦善之 德善也
 
-善长的人会善长；不善长的人也会善长。
+善长的人会善长；不善长的人也会善长。德实现了善长的效果。
 
 > 信者信之 不信者亦信之 德信也
 
-相信的人会相信；不相信的人也会相信。
+相信的人会相信；不相信的人也会相信。德实现了取信的效果。
 
 > 聖人之在天下 歙歙焉 爲天下渾心 百姓皆屬耳目焉 聖人皆咳之
+
+圣人处于宇宙中时，时刻保持着获取信息的状态，作为宇宙中存在着的心的综合，人类系统中的人们都属于圣人获取信息的渠道，圣人让人们保持着纯真的欢乐的状态。
+
+```
+「咳」：小兒笑。
+- 对于圣人而言，看人类的认识能力和水平就像成年人看待孩子一样。
+```
 
 ## 天下
 
